fix: issues with color contrast and current-color

--- a/packages/components/src/components/checkbox/checkbox.scss
+++ b/packages/components/src/components/checkbox/checkbox.scss
@@ -42,7 +42,7 @@
 		@media (forced-colors: active) {
 			&:indeterminate,
 			&:checked {
-				--db-check-element-border-color: #{colors.$db-current-color-bg-enabled};
+				--db-check-element-border-color: #{colors.$db-current-color-on-bg-enabled};
 				border-width: form-components.$check-border-size;
 
 				&::before {
