--- a/packages/components/src/styles/_form-components.scss
+++ b/packages/components/src/styles/_form-components.scss
@@ -348,7 +348,7 @@ $input-valid-types: "color", "date", "datetime-local", "email", "file", "hidden"
 					1
 				) - 1px
 		);
-		color: colors.$db-current-color-enabled;
+		color: colors.$db-current-color-on-bg-enabled;
 	}
 
 	&::before {
